<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_lifecycle</name>
  <version>0.0.0</version>
  <description>rqt_lifecycle provides an rqt plugin for monitoring and interacting with the state of lifecycle nodes.</description>
  <maintainer email="karl.hansen@turftank.com">Karl Damkjær Hansen</maintainer>
  <license>MIT</license>

  <author>Karl D. Hansen</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend >python_qt_binding</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
